@@ -1,5 +1,8 @@
 Changes for APR 1.3.0
 
+  *) Fix assertion from double close of a handle with a rwlock on win32.
+     [Evgueni Brevnov <evgueni.brevnov gmail.com>]
+
   *) APR_FIND_APR macro now supports customisable detailed checks on
      each installed apr. [Justin Erenkrantz, Colm MacCarthaigh]
 
